# mony-api

./: .dockerignore  .env.example  .gitignore  AZURE_TROUBLESHOOTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  check_dependencies.py  migrate-only.sh  pyproject.toml  requirements-dev.txt  requirements.txt  startup.sh  test_deployment.py
.github/workflows/: ci.yml  deploy-dev.yml  deploy-migrations.yml  deploy-prod.yml
alembic/: env.py
alembic/versions/: 7b332f298e27_create_transactions_table.py
app/: auth.py  config.py  database.py  main.py  settings.py
app/api/: main.py
app/api/routes/: receipts.py  transactions.py
app/core/: auth.py  error_handlers.py  exceptions.py  log_utils.py  logging.py  middleware.py  rate_limiter.py  redis_client.py  settings.py
app/crud/: __init__.py  transaction.py
app/models/: __init__.py  base.py  transaction.py
app/repositories/: base.py  transaction_repository.py
app/schemas/: __init__.py  error.py  receipt.py  transaction.py
app/services/: transaction_service.py
tests/: __init__.py  test_main.py
