[project]
name = "mony-api"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi[standard]>=0.117.1",
    "openai>=1.109.1",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.43",
    "psycopg[binary]>=3.0.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pytest>=8.4.2",
]
